<resources>
    <string name="search">Search</string>
    <string name="sort_by">Sort by</string>
    <string name="list_view">List View</string>
    <string name="grid_view">Grid View</string>
    <string name="collection">Collection</string>
    <string name="album" translatable="false">Album</string>
    <string name="single" translatable="false">Single</string>
    <string name="ep" translatable="false">EP</string>
    <string name="remove_text">Remove text</string>
    <string name="album_cover">Album Cover</string>
    <string name="save_album">Save album</string>
    <string name="listen_later_album">Listen later album</string>
    <string name="artist">Artist</string>
    <string name="tracks">Tracks</string>
    <string name="enter_album_url">Enter Album URL</string>
    <string name="close">Close</string>
    <string name="invalid_album_url">Invalid album URL</string>
    <string name="couldn_t_find_albums">Sorry, we couldn\'t find albums for this search.</string>
    <string name="can_t_find_your_favorite_album">If you can\'t find your favorite album, consider adding it to your local collection.</string>
    <string name="add">Add</string>
    <string name="add_album">Add Album</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="compilation">Compilation</string>
    <string name="listen_later">Listen Later</string>
    <string name="album_count">Album Count: %1$d</string>
    <string name="random_album">Random album</string>
    <string name="empty_search">Must enter at least 4 character</string>
    <string name="first_add_something_to_list">First you have to add something to the list</string>
    <string name="new_releases">New releases</string>
    <string name="album_info">%1$s • %2$s • %3$d %4$s</string>
    <string name="latest">Latest</string>
    <string name="oldest">Oldest</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="your_list_is_still_empty">Your list is still empty?</string>
    <string name="add_your_favorite_albums_to_the_list">Add your favorite albums to the list</string>
    <string name="you_don_t_have_any_albums">You don\'t have any albums</string>
    <string name="here_are_the_albums_to_listen_to_in_future">Here are the albums to listen to in future</string>
    <string name="favorite_albums">Favorite albums</string>
    <string name="total_tracks">Total tracks</string>
    <string name="nothing_found">Nothing found</string>
    <string name="empty_string" translatable="false" />
    <string name="speech_not_recognition">Speech recognition is not available</string>
    <string name="enter_album_name">Enter album name</string>
    <string name="informations">Information\'s</string>
    <string name="hour">h</string>
    <string name="sec">sec.</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="duration">"Duration: %1$s"</string>
    <string name="rating">Rating</string>
    <string name="discover_new_releases">Discover New Releases</string>
    <string name="hello">Hello</string>
    <string name="good_evening">Good evening</string>
    <string name="query_to_short">Query to short</string>

    <string-array name="sort_options">
        <item>@string/latest</item>
        <item>@string/oldest</item>
        <item>@string/alphabetical</item>
    </string-array>
    <string name="clear_recent_searches">Clear recent searches</string>
    <string name="total_albums">Total Albums</string>
    <string name="saved_albums_according_to_type">Saved albums according to type</string>
    <string name="total_songs">Total Songs</string>
    <string name="favorite_decade">Favorite decade</string>
    <string name="the_album_with_the_most_songs">The album with the most songs</string>
    <string name="load_all_tracks_to_save_an_album">Load all songs to save an album</string>
    <string name="error_with_saving_album">Error with saving album</string>
    <string name="failed_to_load_artists">Failed to load artists</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>

</resources>