<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/imgAddAlbum"
        android:icon="@drawable/ic_add"
        android:title="@string/add_album"
        app:showAsAction="always" />

    <item
        android:id="@+id/imgListenLater"
        android:icon="@drawable/ic_listen_later_border"
        android:title="@string/listen_later"
        app:showAsAction="always" />

    <item
        android:id="@+id/imgStatistics"
        android:icon="@drawable/ic_statistics"
        android:title="@string/statistics"
        app:showAsAction="always" />

    <item
        android:id="@+id/imgSettings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="always" />

</menu>