<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/imgSearch"
        app:iconTint="@color/navigationIconColor"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/imgLink"
        app:iconTint="@color/navigationIconColor"
        android:icon="@drawable/ic_link"
        android:title="@string/enter_album_url"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/imgStatistics"
        android:title="@string/statistics"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_graph"
        app:iconTint="@color/navigationIconColor"/>

</menu>