<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:theme="@style/Theme.Material3.DayNight.NoActionBar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:textSize="20sp"
        android:gravity="center"
        android:fontFamily="@font/outfit_medium"
        android:textColor="@color/textColor"
        android:layout_marginBottom="30dp"
        android:text="@string/couldn_t_find_albums"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_regular"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/textColor2"
        android:text="@string/can_t_find_your_favorite_album"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:icon="@drawable/ic_add"
        app:iconTint="@color/white"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/add"/>

</LinearLayout>