<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:theme="@style/Theme.Material3.DayNight.NoActionBar"
    tools:context=".AlbumHomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/CustomToolbarStyle"
            app:menu="@menu/toolbar_menu"
            app:title="@string/collection" />

    </com.google.android.material.appbar.AppBarLayout>

    <HorizontalScrollView
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/horizontalScrollView"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_marginEnd="10dp"
                android:id="@+id/txtEverything"
                android:text="@string/everything"
                style="@style/RoundedCornerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginEnd="10dp"
                android:id="@+id/txtAlbum"
                android:text="@string/album"
                style="@style/RoundedCornerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginEnd="10dp"
                android:id="@+id/txtEP"
                android:text="@string/ep"
                style="@style/RoundedCornerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txtSingle"
                android:text="@string/single"
                style="@style/RoundedCornerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </HorizontalScrollView>

    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:gravity="center_vertical"
                android:layout_margin="10dp"
                android:id="@+id/linearChipGroup"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.ChipGroup
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.chip.Chip
                        app:chipIconTint="@color/textColor"
                        app:chipSurfaceColor="@android:color/transparent"
                        android:textColor="@color/textColor"
                        app:chipBackgroundColor="@android:color/transparent"
                        android:id="@+id/chipSortBy"
                        android:text="@string/recently_added"
                        app:chipIcon="@drawable/ic_sort"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.chip.ChipGroup>

                <ImageView
                    android:id="@+id/imgList"
                    android:src="@drawable/ic_grid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/list_view" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                tools:listitem="@layout/layout_album"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearChipGroup"
                android:id="@+id/rvAlbums"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:overScrollMode="never" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>