<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:theme="@style/Theme.Material3.DayNight.NoActionBar"
    tools:context=".AlbumDetailFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/progressBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:overScrollMode="never"
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBar"
                android:background="@color/background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    app:navigationIconTint="@color/navigationIconColor"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:navigationIcon="@drawable/ic_arrow_back" />

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="280dp"
                android:layout_height="280dp"
                app:cardCornerRadius="10dp"
                app:elevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appBar">

                <ImageView
                    android:id="@+id/imgAlbum"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/album_cover" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/linearLayoutAlbumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView">

                <TextView
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/outfit_medium"
                    android:id="@+id/txtAlbumName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    tools:text="Discovery" />

                <TextView
                    android:textColor="@color/textColor2"
                    android:fontFamily="@font/outfit_regular"
                    android:id="@+id/txtArtist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="15sp"
                    tools:text="Daft Punk" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutVectors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayoutAlbumText">

                <ImageView
                    app:tint="@color/textColor"
                    android:id="@+id/imgSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_favorite_border"
                    android:contentDescription="@string/save_album" />

                <ImageView
                    app:tint="@color/textColor"
                    android:id="@+id/imgListenLater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_listen_later_border"
                    android:contentDescription="@string/listen_later_album" />

            </LinearLayout>

            <TextView
                android:fontFamily="@font/outfit_regular"
                android:id="@+id/txtInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/textColor2"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayoutVectors"
                tools:text="Album ' 2001 ' 14 utworów" />

            <LinearLayout
                android:id="@+id/linearLayoutButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtInfo">

                <com.google.android.material.button.MaterialButton
                    android:backgroundTint="@color/buttonColor"
                    android:textColor="@color/white"
                    app:iconTint="@color/white"
                    android:id="@+id/btnArtist"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/inter_medium"
                    android:layout_weight="1"
                    android:text="@string/artist"
                    app:icon="@drawable/ic_artist"
                    app:iconSize="24dp" />

                <com.google.android.material.button.MaterialButton
                    android:backgroundTint="@color/buttonColor"
                    android:textColor="@color/white"
                    app:iconTint="@color/white"
                    android:id="@+id/btnAlbum"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/album"
                    app:icon="@drawable/ic_album"
                    app:iconSize="24dp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/layout_tracks"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/rvTrackList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayoutButtons" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>